# rust-prisma-graphql-next

./: .gitignore  Cargo.toml  README.md  graphql.config.js  nixpacks.toml  package.json  turbo.json
.cargo/: config.toml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/front-end/: package.json
apps/front-end/__generated__/: apollo-helpers.ts  graphql.ts  page.tsx
apps/front-end/components/: card.tsx  create-todo.tsx  icon-button.tsx  todo.tsx
apps/front-end/lib/: with-apollo.tsx
apps/front-end/lib/graphql/: todo.gql
apps/front-end/pages/: _app.tsx  index.tsx
apps/front-end/styles/: globals.css
apps/prisma-cli/: Cargo.toml
libs/graphql/: Cargo.toml
libs/graphql/src/: schema.rs
libs/graphql/src/mutation/: mod.rs  todo.rs
libs/graphql/src/query/: mod.rs  todo.rs
libs/graphql/src/types/: todo.rs
libs/prisma/: .gitignore  Cargo.toml
libs/prisma/src/: lib.rs
libs/services/: Cargo.toml
libs/services/src/: todo.rs
prisma/: schema.prisma
