[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.4"
async-graphql-rocket = "5.0.4"
rocket = "0.5.0-rc.2"
graphql = { path = "../../libs/graphql" }
tokio = "1.23.0"

[[bin]]
name = "api"
path = "src/main.rs"